[package]
name = "dirb-helper"
version = "0.1.0"
edition = "2021"
description = "A smart wrapper and parser for dirb to normalize output for Arsenal Project"
authors = ["Ahmed Wael Abd-elhakeem Abd-Elhakeem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
